# Playground

./: .gitignore  .gitmodules  CMakeLists.txt  Info-iOS.plist.in  Info-macOS.plist.in  PLATFORMS.md  README.md
assets/shaders/: blit.metal  cluster_build.metal  cluster_cull.metal  csm_visibility.metal  cull_geometry.metal  debug.metal  deferred.metal  draw_sky.metal  forward_plus.metal  fplus.metal  frustum_light_cull.metal  gbuffer.metal  generate_hiz.metal  model.metal  raytraced_shadows.metal  shadow_map.metal  sky_loader.metal  ssr.metal  tonemap.metal  triangle.metal  z_prepass.metal
assets/shaders/common/: cluster.h  light.h  math.h  pbr.h  scene_ab.h  types.h
assets/textures/: hachiware.astc
docs/: INPUT_FOCUS.md
notes/: swift_ui_rework.md  todo.md
raw_assets/AppAssets.xcassets/AppIcon macOS.appiconset/: Contents.json
raw_assets/models/MirrorTest/: MirrorTest.gltf
scripts/: build.sh  build_ios_simulator.sh  clean.sh  compress_assets.sh  generate_compile_commands.sh  generate_xcode.sh  generate_xcode_ios.sh
src/: AppDelegate.h  AppDelegate.mm  MetalView.mm  app_delegate.h  app_delegate.mm  application.h  application.mm  fs.h  fs.mm  main.mm  metal_view.h  metal_view.mm
src/asset/: AstcLoader.h  AstcLoader.mm  Ktx2Loader.h  Ktx2Loader.mm  MeshLoader.h  MeshLoader.mm  SkyLoader.h  SkyLoader.mm  StbImage.h  TextureCache.h  TextureCache.mm  astc_loader.mm  ktx2_loader.mm  mesh_loader.h  mesh_loader.mm  mipmapper.h  mipmapper.mm  sky_loader.h  sky_loader.mm  texture_cache.h  texture_cache.mm
src/core/: IosInput.h  IosInput.mm  Logger.README.md  Logger.h  Logger.mm  MacosInput.h  MacosInput.mm  camera.h  camera.mm  input.h  ios_input.h  ios_input.mm  macos_input.h  macos_input.mm
src/math/: AAPLMath.h  AAPLMath.mm
src/metal/: AccelerationEncoder.h  AccelerationEncoder.mm  BlitEncoder.h  BlitEncoder.mm  CommandBuffer.h  CommandBuffer.mm  ComputeEncoder.h  ComputeEncoder.mm  ComputePipeline.mm  GraphicsPipeline.h  GraphicsPipeline.mm  IndirectCommandBuffer.h  IndirectCommandBuffer.mm  RenderEncoder.h  RenderEncoder.mm  ResidencySet.h  ResidencySet.mm  acceleration_encoder.h  acceleration_encoder.mm  arg_buffer.h  arg_buffer.mm  blas.h  blas.mm  blit_encoder.h  blit_encoder.mm  buffer.h  buffer.mm  command_buffer.h  command_buffer.mm  compute_encoder.h  compute_encoder.mm  compute_pipeline.h  compute_pipeline.mm  device.h  device.mm  fence.h  fence.mm  graphics_pipeline.h  graphics_pipeline.mm  indirect_command_buffer.h  (+10 more)
src/renderer/: ResourceIo.h  ResourceIo.mm  SceneAb.h  light.h  light.mm  pass.h  renderer.h  renderer.mm  resource_io.h  resource_io.mm  scene_ab.h  world.h  world.mm
src/renderer/passes/: ClusterCull.h  ClusterCull.mm  DebugRenderer.h  DebugRenderer.mm  HiZ.h  HiZ.mm  SkyDraw.h  SkyDraw.mm  cluster_cull.h  cluster_cull.mm  debug_renderer.h  debug_renderer.mm  deferred.h  deferred.mm  depth_prepass.h  depth_prepass.mm  forward_plus.h  forward_plus.mm  gbuffer.h  gbuffer.mm  hi_z.h  hi_z.mm  reflections.h  reflections.mm  shadows.h  shadows.mm  sky_draw.h  sky_draw.mm  tonemap.h  tonemap.mm
src/swift/: ActionsBridge.h  ActionsBridge.mm  ApplicationBridge.h  ApplicationBridge.mm  CVarRegistry.h  CVarRegistry.mm  ConsoleBridge.h  ConsoleBridge.mm  DebugBridge.h  DebugBridge.mm  MetalViewRepresentable.swift  Playground-Bridging-Header.h  PlaygroundApp.swift
src/swift/Views/: AboutView.swift  ActionsView.swift  CVarSettingsView.swift  ConsoleView.swift  ContentView.swift  DebugView.swift  InputController.swift
tools/: CMakeLists.txt
tools/src/gltfcompress/: CMakeLists.txt  main.mm
